--- a/rottentomatoes-nightmode.css
+++ b/rottentomatoes-nightmode.css
@@ -1,12 +1,11 @@
+@-moz-document domain(rottentomatoes.com) {
+
 /*
 * Author        :  SilentFez
 * URL           :  https://github.com/SilentFez/Userstyles
 * Title         :  rottentomatoes.com - Nightmode
 * Version       :  2.0.2
 */
-
-@-moz-document domain(rottentomatoes.com)
-{
 
 /***** colors used *******************************************
 Background 1:		#000000
