--- a/imdb-nightmode.css
+++ b/imdb-nightmode.css
@@ -1,7 +1,8 @@
 @-moz-document url("imdb.com") {
+	
 /*
-* Author        :  Hille
-* URL           :  http://userstyles.org/users/24096
+* Author        :  SilentFez
+* URL           :  https://github.com/SilentFez/Userstyles
 * Title         :  IMDb.com - Nightmode
 * Version       :  1.3.4
 */
