--- a/soundcloud-nightmode.css
+++ b/soundcloud-nightmode.css
@@ -1,5 +1,5 @@
-@-moz-document url-prefix("https://soundcloud.com"), url-prefix("http://soundcloud.com"), domain(soundcloud.com)
-{
+@-moz-document url-prefix("https://soundcloud.com"), url-prefix("http://soundcloud.com"), domain(soundcloud.com) {
+	
 /*
 * Author        :  SilentFez
 * URL           :  https://github.com/SilentFez/Userstyles
