--- a/golftv-responsive.css
+++ b/golftv-responsive.css
@@ -2,7 +2,7 @@
 /*
 * Author        :  SilentFez
 * URL           :  https://github.com/SilentFez/Userstyles
-* Title         :  golftv - responsive
+* Title         :  golftv - responsive player
 * Version       :  0.0.1
 */	
 h1.title {
