--- a/golftv-responsive.css
+++ b/golftv-responsive.css
@@ -3,22 +3,20 @@
 * Author        :  SilentFez
 * URL           :  https://github.com/SilentFez/Userstyles
 * Title         :  golftv - responsive player
-* Version       :  0.0.1
+* Version       :  0.0.2
 */	
 h1.title {
     font-size: 20px !important;
-    display: block;
 }
-
-a.close {right: 155px;}
 
 .title-parent-container {
     margin: 0 !important;
-    padding-left: 155px;
+    display: block !important;
+    text-align: center;
 }
 
 diva-player {
-    max-height: 88% !important;
-    max-width: 88% !important;
+    max-height: 86% !important;
+    max-width: 86% !important;
 }
 }
